--- a/rapport3.html
+++ b/rapport3.html
@@ -52,20 +52,22 @@
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/history2 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/history2 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/history2 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/me3 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/me3 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/me3 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/estimates/time </td><td>  KO</td><td>200 Param = customer_uuidBAD</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/estimates/price </td><td>  KO</td><td>200 Param = start_longitudeBAD</td></tr>
+<tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/estimates/time </td><td>  KO</td><td>200 Param = start_latitudeBAD</td></tr>
 <tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/history </td><td>  KO</td><td>200 Param = offsetBAD</td></tr>
+<tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/products </td><td>  KO</td><td>200 Param = latitudeBAD</td></tr>
 <tr class="hidden-xs bg-success"><td>Test de type de retour </td><td> GET</td><td>http://localhost:8080/v1/estimates/price </td><td>  OK</td><td></td></tr>
 <tr class="hidden-xs bg-success"><td>Test de type de retour </td><td> GET</td><td>http://localhost:8080/v1/estimates/time </td><td>  OK</td><td></td></tr>
 <tr class="hidden-xs bg-danger"><td>Test de type de retour </td><td> GET</td><td>http://localhost:8080/v1/history </td><td>  KO</td><td>type ref spécifié != type donnée renvoyée</td></tr>
