--- a/rapport3.html
+++ b/rapport3.html
@@ -49,12 +49,6 @@
 <tr class="hidden-xs bg-success"><td>Verif code de retour </td><td> GET</td><td>http://localhost:8080/v1/history </td><td>  OK</td><td></td></tr>
 <tr class="hidden-xs bg-success"><td>Verif code de retour </td><td> GET</td><td>http://localhost:8080/v1/me </td><td>  OK</td><td></td></tr>
 <tr class="hidden-xs bg-success"><td>Verif code de retour </td><td> GET</td><td>http://localhost:8080/v1/products </td><td>  OK</td><td></td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/history2 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/history2 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/history2 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/estimates/time1 </td><td>  OK</td><td>404</td></tr>
@@ -64,8 +58,12 @@
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
-<tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/estimates/price </td><td>  KO</td><td>200 Param = start_latitudeBAD</td></tr>
-<tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/estimates/time </td><td>  KO</td><td>200 Param = start_latitudeBAD</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/products4 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> GET</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> POST</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
+<tr class="hidden-xs bg-success"><td>Bad URL </td><td> PUT</td><td>http://localhost:8080/v1/estimates/price0 </td><td>  OK</td><td>404</td></tr>
 <tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/history </td><td>  KO</td><td>200 Param = offsetBAD</td></tr>
 <tr class="hidden-xs bg-danger"><td>BAD PARAM  </td><td> GET</td><td>http://localhost:8080/v1/products </td><td>  KO</td><td>200 Param = latitudeBAD</td></tr>
 <tr class="hidden-xs bg-success"><td>Test de type de retour </td><td> GET</td><td>http://localhost:8080/v1/estimates/price </td><td>  OK</td><td></td></tr>
